--- a/android/app/src/main/res/drawable/ic_launcher.xml
+++ b/android/app/src/main/res/drawable/ic_launcher.xml
@@ -5,7 +5,7 @@
         android:scaleType="fitCenter" />
     <foreground>
         <inset
-            android:drawable="@drawable/ic_logo_small"
+            android:drawable="@drawable/ic_logo"
             android:insetTop="30%"
             android:insetRight="30%"
             android:insetBottom="30%"
