--- a/android/app/src/main/res/drawable/ic_logo_background.xml
+++ b/android/app/src/main/res/drawable/ic_logo_background.xml
@@ -5,8 +5,7 @@
     android:width="128dp"
     android:height="128dp"
     android:viewportWidth="512"
-    android:viewportHeight="512"
->
+    android:viewportHeight="512">
     <path android:pathData="M0,0h512v512h-512z">
         <aapt:attr name="android:fillColor">
             <gradient
@@ -14,16 +13,13 @@
                 android:startX="512"
                 android:startY="512"
                 android:endX="0"
-                android:endY="0"
-            >
+                android:endY="0">
                 <item
                     android:color="#FF007DE6"
-                    android:offset="0"
-                />
+                    android:offset="0" />
                 <item
                     android:color="#FF50D2FF"
-                    android:offset="1"
-                />
+                    android:offset="1" />
             </gradient>
         </aapt:attr>
     </path>
