--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="light" type="color">#FFFAFAFA</color>
     <color name="primary" type="color">#FF007DE6</color>
 </resources>
