--- a/android/app/src/main/res/drawable/icon.xml
+++ b/android/app/src/main/res/drawable/icon.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
     <background
-        android:drawable="@drawable/ic_logo_background"
+        android:drawable="@drawable/logo_background"
         android:scaleType="fitCenter" />
     <foreground>
         <inset
-            android:drawable="@drawable/ic_logo"
+            android:drawable="@drawable/logo"
             android:insetTop="30%"
             android:insetRight="30%"
             android:insetBottom="30%"
