--- a/android/app/src/main/res/drawable/launch.xml
+++ b/android/app/src/main/res/drawable/launch.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/primary" />
+    <item
+        android:drawable="@drawable/logo"
+        android:gravity="center"
+        android:width="64dp"
+        android:height="64dp" />
 </layer-list>
